[artf623665] - Config Template Save button and table Alignment issues changed.

--- a/phresco-service-web/src/main/webapp/admin/theme/photon/css/media-queries.css
+++ b/phresco-service-web/src/main/webapp/admin/theme/photon/css/media-queries.css
@@ -71,7 +71,7 @@ Width <= 1024
 	}
 @media screen and (min-width : 781px) and (max-width : 1024px) and (max-height:768px) {
 	.content_adder {
-		height: 84%;
+		height: 81%;
 	}
 	
 	.content_feature {
@@ -105,6 +105,9 @@ Width <= 1024
 		.accordion_panel_inner {
 			height:	278px !important;
 		}
+		.content_adder {
+			height: 77%;
+		}
 	}
 }
 
@@ -130,6 +133,11 @@ Width >= 1025 and <= 1152
 	.syncTable .fixed-table-container {
 		height: 250px !important;	
 	}
+	@-moz-document url-prefix() {
+		.accordion_panel_inner {
+			height:	380px !important;
+		}
+	}
 }
 
 /************************************************************************************
@@ -137,7 +145,7 @@ Width >= 1152 and < 1280
 *************************************************************************************/
 @media screen and (min-width : 1152px) and (max-width : 1279px) {
 	.content_adder {
-		height: 88%;
+		height: 88% !important;
 	}
 	
 	.alert_messagelist {
@@ -164,6 +172,9 @@ Width >= 1152 and < 1280
 	@-moz-document url-prefix() {
 		.accordion_panel_inner {
 			height:	335px !important;
+		}
+		.content_adder {
+			height: 85% !important;
 		}
 	}
 }
@@ -214,7 +225,7 @@ Width <= 1280 and height <= 768
 *************************************************************************************/
 @media screen and (device-aspect-ratio: 1280/768) {
 	.content_adder {
-		height: 83%;
+		height: 83% !important;
 	}
 	
 	.content_feature {
@@ -237,6 +248,9 @@ Width <= 1280 and height <= 768
 		.accordion_panel_inner {
 			height:	290px !important;
 		}
+		.content_adder {
+			height: 80% !important;
+		}
 	}
 }
 
@@ -245,7 +259,7 @@ Width >= 1280 and height <= 800
 *************************************************************************************/
 @media screen and (device-aspect-ratio: 1280/800) {
 	.content_adder {
-		height: 85%;
+		height: 83% !important;
 	}
 	
 	.content_feature {
@@ -267,13 +281,40 @@ Width >= 1280 and height <= 800
 		}
 	}
 }
+@media screen and (width : 1280px) and (height: 960px) {
+	.content_adder {
+		height: 83% !important;
+	}
+	
+	.content_feature {
+		height: 81%;
+	}
+	
+	.accordion_panel_inner {
+		height:	380px !important;
+	}
+	.psbltextwidth{
+		width: 64%;
+	}
+	.syncTable .fixed-table-container {
+		height: 400px !important;	
+	}
+	@-moz-document url-prefix() {
+		.accordion_panel_inner {
+			height:	320px !important;
+		}
+	}
+	
+	
+}
+
 
 /************************************************************************************
 Width >= 1280 and height > 800 and height <= 960
 *************************************************************************************/
 @media screen and (max-width : 1280px) and (min-height : 801px) and (max-height : 960px) {
 	.content_adder {
-		height: 91%;
+		height: 80% !important;
 	}
 	
 	.content_feature {
@@ -293,6 +334,9 @@ Width >= 1280 and height > 800 and height <= 960
 		.accordion_panel_inner {
 			height:	415px !important;
 		}
+		.content_adder {
+			height: 77% !important;
+		}
 	}
 }
 
@@ -301,7 +345,7 @@ Width >= 1280 and height >= 961 and heigth <=1024
 *************************************************************************************/
 @media screen and (device-aspect-ratio: 1280/1024) {
 	.content_adder {
-		height: 92%;
+		height: 88%;
 	}
 	
 	.content_feature {
@@ -329,7 +373,7 @@ Width > 1280 and <= 1360
 *************************************************************************************/
 @media screen and (min-width : 1281px) and (max-width : 1360px) {
 	.content_adder {
-		height: 84%;
+		height: 82%;
 	}
 	
 	.content_feature {
@@ -365,6 +409,9 @@ Width > 1280 and <= 1360
 		.accordion_panel_inner {
 			height:	295px !important;
 		}
+		.content_adder {
+			height: 78% !important;
+		}
 	}
 }
 
@@ -373,7 +420,7 @@ Width > 1360 and <= 1600
 *************************************************************************************/
 @media only screen and (min-width : 1361px) and (max-width : 1440px) {
 	.content_adder {
-		height: 89%;
+		height: 84%;
 	}
 	
 	.content_feature {
