--- a/phresco-service-web/src/main/webapp/admin/theme/red_blue/css/media-queries.css
+++ b/phresco-service-web/src/main/webapp/admin/theme/red_blue/css/media-queries.css
@@ -48,7 +48,7 @@ Width <= 1024
 *************************************************************************************/
 @media screen and (min-width : 781px) and (max-width : 1024px) and (max-height:768px) {
 	.content_adder {
-		height: 84%;
+		height: 78% !important;
 	}
 	
 	.content_feature {
@@ -81,6 +81,9 @@ Width <= 1024
 	.accordion_panel_inner {
 		height:	225px !important;
 	}
+	.content_adder {
+		height: 75% !important;
+	}
 	}
 }
 
@@ -99,6 +102,14 @@ Width >= 1025 and <= 1152
 	.accordion_panel_inner {
 		height:	150px !important;
 	}
+	@-moz-document url-prefix() {
+	.accordion_panel_inner {
+		height:	238px !important;
+	}
+	.content_adder {
+		height: 79%;
+	}
+	}
 }
 
 /************************************************************************************
@@ -106,7 +117,7 @@ Width >= 1152 and < 1280
 *************************************************************************************/
 @media screen and (min-width : 1152px) and (max-width : 1279px) {
 	.content_adder {
-		height: 88%;
+		height: 82% !important;
 	}
 	
 	.alert_messagelist {
@@ -122,6 +133,9 @@ Width >= 1152 and < 1280
 	@-moz-document url-prefix() {
 	.accordion_panel_inner {
 		height:	303px !important;
+	}
+	.content_adder {
+		height: 77% !important;
 	}
 	}
 
@@ -159,7 +173,7 @@ Width <= 1280 and height <= 768
 *************************************************************************************/
 @media screen and (device-aspect-ratio: 1280/768) {
 	.content_adder {
-		height: 83%;
+		height: 80% !important;
 	}
 	
 	.content_feature {
@@ -180,6 +194,9 @@ Width <= 1280 and height <= 768
 	.accordion_panel_inner {
 		height:	224px !important;
 	}
+	.content_adder {
+		height: 75% !important;
+	}
 	}
 	
 	.psbltextwidth{
@@ -192,7 +209,7 @@ Width >= 1280 and height <= 800
 *************************************************************************************/
 @media screen and (device-aspect-ratio: 1280/800) {
 	.content_adder {
-		height: 85%;
+		height: 82% !important;
 	}
 	
 	.content_feature {
@@ -209,6 +226,9 @@ Width >= 1280 and height <= 800
 	.accordion_panel_inner {
 		height:	250px !important;
 	}
+	.content_adder {
+		height: 78% !important;
+	}
 	}
 }
 
@@ -217,7 +237,7 @@ Width >= 1280 and height > 800 and height <= 960
 *************************************************************************************/
 @media screen and (max-width : 1280px) and (min-height : 801px) and (max-height : 960px) {
 	.content_adder {
-		height: 91%;
+		height: 88% !important;
 	}
 	
 	.content_feature {
@@ -230,9 +250,16 @@ Width >= 1280 and height > 800 and height <= 960
 	.psbltextwidth{
 		width: 64%;
 	}
+	
 	@-moz-document url-prefix() {
 	.accordion_panel_inner {
 		height:	380px !important;
+	}
+	.content_adder {
+		height: 82% !important;
+	}
+	.content_feature {
+		height: 87%;
 	}
 	}
 }
@@ -242,7 +269,7 @@ Width >= 1280 and height >= 961 and heigth <=1024
 *************************************************************************************/
 @media screen and (device-aspect-ratio: 1280/1024) {
 	.content_adder {
-		height: 92%;
+		height: 88% !important;
 	}
 	
 	.content_feature {
@@ -259,6 +286,9 @@ Width >= 1280 and height >= 961 and heigth <=1024
 	.accordion_panel_inner {
 		height:	435px !important;
 	}
+	.content_adder {
+		height: 80% !important;
+	}
 	}
 }
 
@@ -267,7 +297,7 @@ Width > 1280 and <= 1360
 *************************************************************************************/
 @media screen and (min-width : 1281px) and (max-width : 1360px) {
 	.content_adder {
-		height: 84%;
+		height: 78% !important;
 	}
 	
 	.content_feature {
@@ -289,6 +319,9 @@ Width > 1280 and <= 1360
 		.accordion_panel_inner {
 			height:	230px !important;
 		}
+		.content_adder {
+			height: 75% !important;
+		}
 	}
 	.psbltextwidth{
 		width: 64%;
@@ -300,7 +333,7 @@ Width > 1360 and <= 1600
 *************************************************************************************/
 @media only screen and (min-width : 1361px) and (max-width : 1600px) {
 	.content_adder {
-		height: 89%;
+		height: 78% !important;
 	}
 	
 	.content_feature {
